[project]
name = "translation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dashscope>=1.23.6",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-deepseek>=0.1.3",
    "langchain-tavily>=0.2.4",
    "langgraph>=0.4.9",
    "pypdf>=5.6.1",
]
