[project]
name = "translation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dashscope>=1.23.6",
    "dotenv>=0.9.9",
    "graphrag>=2.3.0",
    "gunicorn>=23.0.0",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.26",
    "langchain-deepseek>=0.1.3",
    "langchain-tavily>=0.2.4",
    "langgraph>=0.4.9",
    "lightrag-hku[api]>=1.3.9",
    "nano-vectordb>=0.0.4.3",
    "pypdf>=5.6.1",
    "pypdf2>=3.0.1",
    "pytest>=9.0.1",
    "python-docx>=1.2.0",
    "python-magic>=0.4.27",
    "unstructured[pdf]>=0.15.14",
    "unstructured-client>=0.42.3",
    "llama-index>=0.14.8",
    "llama-index-readers-file>=0.5.5",
    "langchain-openai>=0.3.25",
    "langchainhub>=0.1.21",
    "httpx-sse>=0.4.0",
    "langchain>=1.0",
]
